tests/integration/libuild/errors/schema-type-error/libuild.config.ts
export default {
  input: {
    index: true,
  },
};
